# AI-Med-Agent

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  AICLOUD_INNOVATION_FRAMEWORK.md  AWS_ORGANIZATIONS_SUMMARY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  ORGANIZATIONS_SETUP.md  ORGANIZATIONS_TAGGING.md  PRODUCTION_TRANSFORMATION_SUMMARY.md  README.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  aws-organizations-setup.yaml  aws_config.py  aws_organizations.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: agent-framework.yml  deploy-appconfig.yml  deploy.yml  secrets-scan.yml  test-lint.yml
agents/: __init__.py
agents/base/: __init__.py  agent.py  protocol.py
agents/medical/: __init__.py  diagnosis_agent.py  monitoring_agent.py  triage_agent.py
agents/memory/: __init__.py  manager.py  store.py
agents/monitoring/: __init__.py  logger.py  metrics.py
agents/orchestration/: __init__.py  coordinator.py  orchestrator.py
agents/utils/: __init__.py  helpers.py  validators.py
aicloud_innovation/: __init__.py
aicloud_innovation/agents/: __init__.py  agent_registry.py  base_agent.py  specialized_agents.py
aicloud_innovation/monitoring/: __init__.py  observer.py
aicloud_innovation/orchestration/: __init__.py  orchestrator.py
aicloud_innovation/utils/: __init__.py  config_loader.py  logger.py
config/: agent-config-dev.json  agent-config-prod.json  agent-config-staging.json  feature-flags.json
config/agents/: agent_config.yaml  config_manager.py
docs/: AGENT_ARCHITECTURE.md  APPCONFIG_REFERENCE.md  INDEX.md
docs/agents/: ARCHITECTURE.md  DEPLOYMENT.md  FRAMEWORK_GUIDE.md
docs/organizations/: SETUP.md  SUMMARY.md  (+1 more)
examples/: enterprise_framework_demo.py
scripts/: deploy_appconfig.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_framework.py
(+21 files in other folders)
